# indy-news

./: .dockerignore  .gitignore  Dockerfile  Home.py  README.md  api.py  convert-html-2.py  docker-compose.yml  extract-openapi.py  keywords.py  openapi.yaml  pyproject.toml  requirements-prod.txt  requirements-test.txt  requirements.txt  retriever.py  store.py  test.py
.github/workflows/: api.yaml  build.yaml
api/: convert-html.py  extract-openapi.py  main.py  retriever.py  store.py
api/tools/: youtube.py
data/: all.csv  allsides.com.json  combined.json  mediabiasfactcheck.com.json
db/: default__vector_store.json  docstore.json  index_store.json
lib/: auth.py  cache.py  parameterized_lock.py
nginx/: api.conf
pages/: 1-Media.py  2-Youtube.py  3-MediaBiasFactCheck.py  4-AllSides.py  DUMB: AllSides.py  DUMB: MediaBiasFactCheck.py  VECTOR: Media.py  VECTOR: Youtube.py
prompts/: csv-updater.txt  indy-news-assistant.txt
spec/: app.yaml
