[build-system]
requires = ["setuptools~=69.0", "wheel~=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doup"
version = "0.1.1"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Maurice Faber", email = "morriz@idiotz.nl" }]
description = "Streamlit app and FastAPI to power Indy News assistant."
readme = "README.md"
classifiers = [
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed",
]
keywords = [
  "youtube",
  "ai",
  "media",
  "bm25",
  "vector-databse",
  "independent-news",
]
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/morriz/indy-news"
"Source Code" = "https://github.com/morriz/indy-news"
"Bug Tracker" = "https://github.com/morriz/indy-news/issues"

[tool.black]
line-length = 88
preview = true
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311

[tool.mypy]
check_untyped_defs = true
disable_error_code = ["import-untyped"]
disallow_any_generics = true
disallow_untyped_defs = true
explicit_package_bases = true
follow_imports = "skip"
plugins = "pydantic.mypy"
python_version = "3.11"
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pydantic-mypy]
init_forbid_extra = true
warn_untyped_fields = true

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "invalid-name",
  "missing-docstring",
  "missing-module-docstring",
  "missing-timeout",
  "no-name-in-module",
  "redefined-builtin",
  "too-few-public-methods",
  "too-many-arguments",
  "unused-argument",
  "wrong-import-position",
]

[tool.pylint.'FORMAT']
max-line-length = 120

[tool.pyproject-fmt]
indent = 4
keep_full_version = false
max_supported_python = "3.12"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-prod.txt"] }
optional-dependencies = { test = { file = ["requirements-test.txt"] } }
